--- a/svg.html
+++ b/svg.html
@@ -93,13 +93,24 @@
     <circle cx="10" cy="50" r="10" fill="#fff" />
   </svg> -->
 
+  <!-- 中心点 180 203 -->
   <svg width="360" height="406" style="position:absolute;right:30px;top: 10px">
     <path d="M 40 120, a 2 2.2, 0 0 1, 160 0, a 1 0.4, 0 0 0, -160 0"
       style="fill:#EC0012;stroke:#b42828;stroke-width:1" />
     <circle cx="30" cy="120" r="20" fill="#fff" />
+    <!-- 头 -->
     <path d="M 70 130, a 1 0.9, 0 0 1, 133 0, a 1 0.9, 0 0 1, -133 0" style="fill:#fff" />
-    <path d="M 74 130, a 1 0.7, 0 0 1, 125 0" style="fill:#FCDDD6" />
-    <path d="M 104 100, a 1 0.7, 0 0 1, 15 0" style="fill:#fff" />
+    <path d="M 74 130, a 1 0.7, 0 0 1, 122 0" style="fill:#FCDDD6" />
+    <!-- 61 +-中心在 135 差值20， 宽度是10 135 + 20 - 10 -->
+    <path d="M 115 103, a 1 0.7, 0 0 1, 10 0, a 1 0.2, 0 0 0, -10 0" style="fill:#fff" />
+    <path d="M 144 103, a 1 0.7, 0 0 1, 10 0, a 1 0.2, 0 0 0, -10 0" style="fill:#fff" />
+    <!-- 眼睛 -->
+    <circle cx="120" cy="108" r="2.4" fill="#333" />
+    <circle cx="149" cy="108" r="2.4" fill="#333" />
+    <!-- 腮红 -->
+    <circle cx="106" cy="130" r="12" fill="#F2AFBA" />
+    <circle cx="156" cy="130" r="12" fill="#F2AFBA" />
+    
 
   </svg>
 
