--- a/svg.html
+++ b/svg.html
@@ -94,22 +94,34 @@
   </svg> -->
 
   <!-- 中心点 180 203 -->
-  <svg width="360" height="406" style="position:absolute;right:30px;top: 10px">
-    <path d="M 40 120, a 2 2.2, 0 0 1, 160 0, a 1 0.4, 0 0 0, -160 0"
+  <svg width="360" height="456" style="position:absolute;right:30px;top: 10px;background-color:#666">
+    <path d="M 60 120, a 2 2.2, 0 0 1, 210 0, a 1 0.32, 0 0 0, -210 0"
       style="fill:#EC0012;stroke:#b42828;stroke-width:1" />
-    <circle cx="30" cy="120" r="20" fill="#fff" />
+    <circle cx="50" cy="123" r="26" fill="#fff" />
     <!-- 头 -->
-    <path d="M 70 130, a 1 0.9, 0 0 1, 133 0, a 1 0.9, 0 0 1, -133 0" style="fill:#fff" />
-    <path d="M 74 130, a 1 0.7, 0 0 1, 122 0" style="fill:#FCDDD6" />
-    <!-- 61 +-中心在 135 差值20， 宽度是10 135 + 20 - 10 -->
-    <path d="M 115 103, a 1 0.7, 0 0 1, 10 0, a 1 0.2, 0 0 0, -10 0" style="fill:#fff" />
-    <path d="M 144 103, a 1 0.7, 0 0 1, 10 0, a 1 0.2, 0 0 0, -10 0" style="fill:#fff" />
+    <path d="M 90 130, a 1 0.9, 0 0 1, 180 0, a 1 0.9, 0 0 1, -180 0" style="fill:#fff" />
+    <path d="M 94 130, a 1 0.62, 0 0 1, 172 0" style="fill:#FCDDD6" />
+    <!-- 眉毛 -->
+    <path d="M 150 100,
+            Q 160 90 170 100 
+            Q 170 102 168 102 
+            Q 160 96 152 102 
+            Q 150 102 150 100 
+          " style="fill:#fff" />
+    <path d="M 190 100,
+            Q 200 90 210 100 
+            Q 210 102 208 102 
+            Q 200 96 192 102 
+            Q 190 102 190 100 
+          " style="fill:#fff" />
     <!-- 眼睛 -->
-    <circle cx="120" cy="108" r="2.4" fill="#333" />
-    <circle cx="149" cy="108" r="2.4" fill="#333" />
+    <circle cx="160" cy="108" r="3.4" fill="#333" />
+    <circle cx="161" cy="107" r="0.7" fill="#aaa" />
+    <circle cx="199" cy="108" r="3.4" fill="#333" />
+    <circle cx="199" cy="107.3" r="0.7" fill="#aaa" />
     <!-- 腮红 -->
-    <circle cx="106" cy="130" r="12" fill="#F2AFBA" />
-    <circle cx="156" cy="130" r="12" fill="#F2AFBA" />
+    <path d="M 140 110, a 1 0.62, 0 0 1, 12 0" style="fill:#F2AFBA" />
+    <!-- <circle cx="156" cy="130" r="12" fill="#F2AFBA" /> -->
     
 
   </svg>
