--- a/svg.html
+++ b/svg.html
@@ -5,128 +5,37 @@
   <title>SVG</title>
   <link href="./css/common.css" rel="stylesheet" type="text/css" />
   <link href="./css/svg.css" rel="stylesheet" type="text/css" />
-  <script src="https://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
-  <!-- <script src="js/share.js"></script> -->
+  <script src="./js/Bezier.js"></script>
+  <script src="./js/test.js"></script>
 </head>
 
 <body>
-  <svg xmlns="http://www.w3.org/2000/svg" width="1300" height="1400" version="1.1">
-    <g fill="white">
-      <text x="10" y="25">M L</text>
-      <path d="M 50 10, L 70 30" style="stroke:purple;stroke-width:2" />
+  <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="400" width="450">
+    <path id="lineAB" d="M 100 350 l 150 -300" stroke="red" stroke-width="3" fill="none" />
+    <path id="lineBC" d="M 250 50 l 150 300" stroke="red" stroke-width="3" fill="none" />
+    <path d="M 175 200 l 150 0" stroke="green" stroke-width="3" fill="none" />
+
+    <path d="M 100 350 Q 250 50 400 350" stroke="blue" stroke-width="5" fill="none" />
+
+    <!-- Mark relevant points -->
+    <g stroke="black" stroke-width="3" fill="black">
+      <circle id="pointA" cx="100" cy="350" r="3" />
+      <circle id="pointB" cx="250" cy="50" r="3" />
+      <circle id="pointC" cx="400" cy="350" r="3" />
     </g>
-
-    <g fill="white">
-      <text x="100" y="90">H V Z, H水平方向画至某位置，V垂直方向画至某位置，Z关闭路线即封口: M 20 70, V 120 H 120 Z</text>
-      <path d="M 20 70, V 120 H 120 Z" style="fill:#a76;stroke:purple;stroke-width:2" />
+    <!-- Label the points -->
+    <g font-size="30" font="sans-serif" fill="black" stroke="none" text-anchor="middle">
+      <text x="100" y="350" dx="-30">A</text>
+      <text x="250" y="50" dy="-10">B</text>
+      <text x="400" y="350" dx="30">C</text>
     </g>
-
-    <g fill="white">
-      <text x="150" y="140">C, </text>
-      <path d="M 20 140, C 40 110, 30 170, 90 150 C 140 100, 150 190, 190 150 "
-        style="fill:#a76;stroke:purple;stroke-width:2" />
-    </g>
-
-    <g fill="white">
-      <text x="150" y="190">S, 画曲线，S 中间控制点坐标 结束点坐标</text>
-      <path d="M 100 200, S 140 260 200 200, S 230 290 260 200 L300 210  "
-        style="fill:#a76;stroke:purple;stroke-width:2" />
-    </g>
-
-    <g fill="white">
-      <text x="150" y="270">Q 二次贝塞尔曲线 </text>
-      <path d="M 100 300, Q 140 360 200 300, L 100 260" style="fill:#a76;stroke:purple;stroke-width:2" />
-    </g>
-
-
-    <g fill="white">
-      <text x="190" y="380">T, 光滑二次贝塞尔曲线</text>
-      <path d="M 100 400, T 140 460 200 400, L 100 360" style="fill:#a76;stroke:purple;stroke-width:2" />
-    </g>
-
-
-    <g fill="white">
-      <text x="190" y="520">A</text>
-      <path d="M 40 520, A 20 50 0 0 1 80 550" style="fill:#a76;stroke:purple;stroke-width:2" />
-      <!-- <path d="M 40 520, A 20 50 0 0 1 40 550" style="fill:#a76;stroke:purple;stroke-width:2" /> -->
-    </g>
-
-
-    <!-- <ellipse cx="100" cy="80" rx="100" ry="50" style="fill:yellow;stroke:purple;stroke-width:2" />
-    <rect x="50" y="20" rx="20" ry="111" width="150" height="150"
-      style="fill:red;stroke:black;stroke-width:5;opacity:0.5" /> -->
-
-    <!-- <ellipse cx="240" cy="150" rx="220" ry="30" style="fill:yellow" />
-    <ellipse cx="240" cy="150" rx="190" ry="20" style="fill:white;opacity:0.9" /> -->
-
-
-    <!-- <polygon points="210 110, 300 310, 220 350, 123 334" style="fill:lime;stroke:purple;stroke-width:1" />
-    <line x1="210" y1="110" x2="220" y2="350" style="stroke:purple;stroke-width:1;" /> -->
-
-    <!-- <path d="M 375 0 a1 1 0 0 0, 100 0" />
-    <path d="M 575 0, a1 575 20 675 20, 675 00" /> -->
-
-    <!-- <defs>
-      <path id="path1" d="M 375 30 a1 1 0 0 0, 100 0" />
-      <path id="path2" d="M 375 10 a2 1 0 0 0 100 0" />
-    </defs>
-    <text x="10" y="100" style="fill:red;">
-      <textPath xlink:href="#path1">a1 I love SVG I love SVG</textPath>
-      <textPath xlink:href="#path2">a2 I love SVG I love SVG</textPath>
-    </text>
-
-    <defs>
-      <filter id="f1" x="0" y="0">
-        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
-      </filter>
-    </defs>
-    <path d="M 375 300 a1 1 0 0 0, 100 0" fill="#194e94" filter="url(#f1)" /> -->
-
-
-
-
   </svg>
-
-
-  <!-- <svg width="200" height="250" style="background-color: rgb(38, 19, 82);">
-    <circle cx="60" cy="50" r="50" fill="#F00" />
-    <circle cx="10" cy="50" r="10" fill="#fff" />
-  </svg> -->
-
-  <!-- 中心点 180 203 -->
-  <svg width="360" height="456" style="position:absolute;right:30px;top: 10px;background-color:#666">
-    <path d="M 60 120, a 2 2.2, 0 0 1, 210 0, a 1 0.32, 0 0 0, -210 0"
-      style="fill:#EC0012;stroke:#b42828;stroke-width:1" />
-    <circle cx="50" cy="123" r="26" fill="#fff" />
-    <!-- 头 -->
-    <path d="M 90 130, a 1 0.9, 0 0 1, 180 0, a 1 0.9, 0 0 1, -180 0" style="fill:#fff" />
-    <path d="M 94 130, a 1 0.62, 0 0 1, 172 0" style="fill:#FCDDD6" />
-    <!-- 眉毛 -->
-    <path d="M 150 100,
-            Q 160 90 170 100 
-            Q 170 102 168 102 
-            Q 160 96 152 102 
-            Q 150 102 150 100 
-          " style="fill:#fff" />
-    <path d="M 190 100,
-            Q 200 90 210 100 
-            Q 210 102 208 102 
-            Q 200 96 192 102 
-            Q 190 102 190 100 
-          " style="fill:#fff" />
-    <!-- 眼睛 -->
-    <circle cx="160" cy="108" r="3.4" fill="#333" />
-    <circle cx="161" cy="107" r="0.7" fill="#aaa" />
-    <circle cx="199" cy="108" r="3.4" fill="#333" />
-    <circle cx="199" cy="107.3" r="0.7" fill="#aaa" />
-    <!-- 腮红 -->
-    <path d="M 140 110, a 1 0.62, 0 0 1, 12 0" style="fill:#F2AFBA" />
-    <!-- <circle cx="156" cy="130" r="12" fill="#F2AFBA" /> -->
-    
-
-  </svg>
-
-  <img class="img1" src="./img/img1.png" />
+  <span id="point"></span>
+  <!-- <span id="go" onclick="onGo()">go</span>
+  <div id="box">css</div>
+  <div id="box1">简单</div>
+  <div id="box2">牛顿迭代</div> -->
+<script src="./js/svg.js"></script>
 </body>
 
 </html>
