--- a/svg/index.html
+++ b/svg/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <title>SVG</title>
-  <link href="./css/common.css" rel="stylesheet" type="text/css" />
-  <link href="./css/svg.css" rel="stylesheet" type="text/css" />
+  <link href="../css/common.css" rel="stylesheet" type="text/css" />
+  <link href="./svg.css" rel="stylesheet" type="text/css" />
   <script src="./js/Bezier.js"></script>
   <script src="./js/test.js"></script>
 </head>
