--- a/animation/index.html
+++ b/animation/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>CSS</title>
   <style>
-    div {
+    .box {
       position: absolute;
       top: 0;
       left: 0;
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-  <div>
+  <div class="box">
   </div>
 </body>
 
