--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <span>SVG 画线和动画</span>
     <span>CSS新属性layer</span>
   </div>
+  <div onclick="ToPage('bg')">
+    <span>段落文字的背景色</span>
+    <span></span>
+  </div>
 </body>
 
 </html>
