--- a/index.html
+++ b/index.html
@@ -9,32 +9,25 @@
 <body>
   <script>
     const list = [
-      {title: '月亮移动', url: 'moon', desc: 'animation '}
+      {title: '月亮移动', url: 'moon', desc: 'animation '},
+      {title: 'CSS 碰撞', url: 'animation', desc: 'animation '},
+      {title: 'layer属性', url: 'layer', desc: 'CSS新属性layer '},
+      {title: 'SVG 画线和动画', url: 'svg', desc: 'CSS新属性layer '},
+      {title: '段落文字的背景色', url: 'bg', desc: ' '},
     ]
     const ToPage = (url) => {
       window.location.href=`${url}/index.html`
     }
+
+    const body = document.getElementsByTagName('BODY')[0];
+    list.forEach(i => {
+
+      const div = document.createElement('div');
+      div.innerHTML = `<span>${i.title}</span><span>${i.desc}</span>`;
+      div.onclick = () => ToPage(i.url)
+      body.appendChild(div);
+    })
   </script>
-  <div onclick="ToPage('moon')">
-    <span>月亮移动</span>
-    <span>animation</span>
-  </div>
-  <div onclick="ToPage('animation')">
-    <span>CSS 碰撞</span>
-    <span>animation</span>
-  </div>
-  <div onclick="ToPage('layer')">
-    <span>layer属性</span>
-    <span>CSS新属性layer</span>
-  </div>
-  <div onclick="ToPage('svg')">
-    <span>SVG 画线和动画</span>
-    <span>CSS新属性layer</span>
-  </div>
-  <div onclick="ToPage('bg')">
-    <span>段落文字的背景色</span>
-    <span></span>
-  </div>
 </body>
 
 </html>
