--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       {title: 'layer属性', url: 'layer', desc: 'CSS新属性layer '},
       {title: 'SVG 画线和动画', url: 'svg', desc: 'CSS新属性layer '},
       {title: '段落文字的背景色', url: 'bg', desc: ' '},
+      {title: '时钟', url: 'clock', desc: ' '},
     ]
     const ToPage = (url) => {
       window.location.href=`${url}/index.html`
